@startuml
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam shadowing false
' ------------------------------------------------

class Point {

# x : double

# y : double

* Point()
* Point(double X, double Y)
* Point(const Point &other)
* ~Point()
* void setX(double X)
* void setY(double Y)
* double getX() const
* double getY() const
  }

class Polygon {

# size : int

# points : Point*

* Polygon(int size)
* Polygon(const Polygon &other)
* ~Polygon()
* void setPoint(int index, const Point &p)
* void setPoint(int index, double X, double Y)
* double area() const
  }

class Quadrilateral {
' no new data members in provided header; inherits protected members from Polygon

* Quadrilateral()            ' default (size = 4)
* Quadrilateral(const Quadrilateral &other)
* ~Quadrilateral()
  }

class Trapezoid {

* shorterSide : double
* longerSide  : double

- Trapezoid(double s, double l)
- Trapezoid(const Trapezoid &other)
- ~Trapezoid()
- double getShorterSide() const
- double getLongerSide() const
  }

class Parallelogram {

* acuteAngle  : double
* shorterSide : double
* longerSide  : double

- Parallelogram(double s, double l, double a)
- Parallelogram(const Parallelogram &other)
- ~Parallelogram()
- double getShorterSide() const
- double getLongerSide() const
- double getAcuteAngleInRadian() const
  }

class Rhombus {

* side       : double
* acuteAngle : double

- Rhombus(double s, double a)
- Rhombus(const Rhombus &other)
- ~Rhombus()
- double getSide() const
- double getAngle() const
  }

class Rectangle {

* shorterSide : double
* longerSide  : double

- Rectangle(double s, double l)
- Rectangle(const Rectangle &other)
- ~Rectangle()
- double getShorterSide() const
- double getLongerSide() const
  }

class Square {

* side : double

- Square(double s)
- Square(const Square &other)
- ~Square()
- double getSide() const
  }

Quadrilateral --|> Polygon : public
Trapezoid --|> Quadrilateral : public
Parallelogram --|> Quadrilateral : public
Rhombus --|> Quadrilateral : public
Rectangle --|> Quadrilateral : public
Square --|> Quadrilateral : public


Polygon *-- Point : points [0..*]

note right of Polygon
Composition: Polygon owns an array of Point (Point*).
size indicates number of points; for Quadrilateral size == 4.
end note

note left of Quadrilateral
Quadrilateral inherits Polygon (public) and
does not add new protected members in provided header.
end note

@enduml
